# endershare-voice

./: .gitignore  DISCORD_VOICE_UI_RESEARCH.md  README.md  build-windows.ps1  copy-gstreamer.bat  cred.txt  deploy-update.sh  tauri.key
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: archive.yml  lockfile.yml  tauri.yml  test.yml
cinny/: build-and-deploy.sh  config.json  package-lock.json  package.json
cinny/src/app/components/: UpdateBanner.tsx
cinny/src/app/components/editor/: input.ts
cinny/src/app/components/loading/: Loading.css.ts
cinny/src/app/components/page/: Page.tsx  style.css.ts
cinny/src/app/components/presence/: styles.css.ts
cinny/src/app/components/sidebar/: Sidebar.css.ts
cinny/src/app/components/upload-board/: UploadBoard.css.ts
cinny/src/app/components/upload-card/: UploadCard.css.ts
cinny/src/app/components/user-avatar/: UserAvatar.css.ts
cinny/src/app/components/user-profile/: styles.css.ts
cinny/src/app/features/channels/: DraggableCategory.tsx  DraggableChannel.tsx  UnifiedChannelList.tsx  index.ts  types.ts  unifiedChannels.css.ts  useChannelDnD.ts  useChannelLayout.ts
cinny/src/app/features/lobby/: SpaceItem.tsx
cinny/src/app/features/room/: RoomTimeline.css.ts  RoomViewFollowing.tsx
cinny/src/app/features/room-nav/: RoomNavItem.tsx
cinny/src/app/features/room/message/: Message.tsx
cinny/src/app/features/settings/general/: General.tsx
cinny/src/app/features/voice/: ConnectionStatsModal.tsx  DeviceSelector.tsx  GameCapture.ts  GameStreamButton.tsx  GameStreamContext.tsx  LiveKitContext.tsx  LiveKitContext.tsx.bak  MediaControlsRow.tsx  OBSController.ts  PingVisualizer.tsx  RNNoiseProcessor.ts  StreamingModal.tsx  SunshineController.ts  UserBanner.tsx  UserProfilePopup.tsx  VoiceBanner.tsx  VoiceCallView.tsx  VoiceChannelSection.tsx  VoiceChannelSettings.tsx  VoicePanel.tsx  VoiceRoom.tsx  callView.css.ts  index.ts  nativeStreaming.ts  streamingModal.css.ts  styles.css.ts  useCallDuration.ts  useDeviceSelection.ts  useLiveKit.ts  useNoiseFilter.ts  useOBSConnection.ts  usePingHistory.ts  usePingStats.ts  useRNNoiseFilter.ts  voiceChannel.css.ts  voicePanel.css.ts  voiceRoom.css.ts
cinny/src/app/hooks/: useMediaAuthentication.ts
cinny/src/app/pages/: App.tsx
cinny/src/app/pages/client/: ClientNonUIFeatures.tsx  ClientRoot.tsx  SidebarNav.tsx
cinny/src/app/pages/client/direct/: Direct.tsx
cinny/src/app/pages/client/explore/: Explore.tsx
cinny/src/app/state/: settings.ts
cinny/src/app/utils/: matrix.ts  nativeUpload.ts
src-tauri/: Cargo.toml  tauri.conf.json  upload.rs
src-tauri/.cargo/: config.toml
src-tauri/nsis/: hooks.nsi  installer.nsi
src-tauri/src/: main.rs  streaming.rs  streaming.rs.bak  upload.rs
(+6 files in other folders)
