[package]
name = "cinny"
version = "4.10.44"
description = "Yet another matrix client"
authors = ["Ajay Bura"]
license = "AGPL-3.0-only"
repository = "https://github.com/cinnyapp/cinny-desktop"
default-run = "cinny"
edition = "2021"
rust-version = "1.61"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0.109"
serde = { version = "1.0.193", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["time"] }

# Tauri with sidecar support
tauri = { version = "1.8.0", features = [
    "api-all",
    "devtools",
    "updater",
    "process-command-api"
] }

tauri-plugin-localhost = "0.1.0"
tauri-plugin-window-state = "0.1.1"

# Windows APIs for screen/window enumeration
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
