[package]
name = "cinny-min"
version = "4.12.121"
description = "Matrix client with voice channels and game streaming"
authors = ["endershare.org"]
license = "AGPL-3.0-only"
repository = "https://github.com/Endermoon21/cinny-min"
default-run = "cinny-min"
edition = "2021"
rust-version = "1.61"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0.109"
serde = { version = "1.0.193", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["time", "rt-multi-thread"] }

# Tauri (removed process-command-api since we don't use sidecars anymore)
tauri = { version = "1.8.0", features = [
    "api-all",
    "devtools",
    "updater"
] }

# GStreamer Rust bindings for native WHIP streaming
gstreamer = "0.23"

# HTTP client for native file uploads (bypasses WebView CORS issues)
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
urlencoding = "2.1"
base64 = "0.22"
# Note: Avoid tokio-util and futures crates - they pull in glib-sys which requires pkg-config on Windows

# Image processing for thumbnails
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

tauri-plugin-localhost = "0.1.0"
tauri-plugin-window-state = "0.1.1"

# Windows APIs for screen/window enumeration and thumbnails
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
] }

# Reliable window screenshot capture
win-screenshot = "4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
